Filterable Search: Fix a logic error in the filters modal. On mobile, show the number of filters that have been selected on the Filter button once the modal is closed

--- a/resources/gato-area-filterable-search/css/filterablesearch.scss
+++ b/resources/gato-area-filterable-search/css/filterablesearch.scss
@@ -55,6 +55,12 @@
           content: 'Filter';
         }
       }
+      .filter-count {
+        display: none;
+        @media (max-width: $sm-breakpoint) {
+          display: inline;
+        }
+      }
     }
     .toggle-view {
       @media (max-width: $sm-breakpoint) {
